Updated with Shift Types and fixed issue with querying from different timezones

--- a/src/app/result-view/result-view.component.sass
+++ b/src/app/result-view/result-view.component.sass
@@ -19,6 +19,16 @@
 
 .red
     color: #cc6969
+
+.orange
+    color: #ccaa59
+
+.purple
+    color: #840051
+
+.aqua
+    color: #aaaacc
+
 table
     width: 100%
     min-width: 450px
